run label encoding no sampling

--- a/jupyter_notebooks/k_nearest_neighbor.ipynb
+++ b/jupyter_notebooks/k_nearest_neighbor.ipynb
@@ -13,16 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/I516258/opt/anaconda3/lib/python3.9/site-packages/scipy/__init__.py:146: UserWarning: A NumPy version >=1.16.5 and <1.23.0 is required for this version of SciPy (detected version 1.23.3\n",
-      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#imports\n",
     "from preprocessing.preprocessing_label_encoding import *\n",
@@ -87,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "def evaluation(target_validation, diabetes_test_prediction, k, metric, preprocessing):\n",
@@ -97,7 +88,7 @@
     "    acc_list.append(acc)\n",
     "    cr = classification_report(target_validation, diabetes_test_prediction)\n",
     "    cr_list.append(cr)\n",
-    "    f2 = fbeta_score(target_validation, diabetes_test_prediction, 2)\n",
+    "    f2 = fbeta_score(target_validation, diabetes_test_prediction, beta=2)\n",
     "    f2_list.append(f2)\n",
     "    return \"{}\\n acc = {}\\n f2-score = {}\".format(approach, acc, f2)"
    ],
@@ -129,24 +120,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "k= 5 metric: cosine:\n",
-      " acc = 0.8348629810814321\n",
-      " f1-score = 0.8086342517615546\n",
-      "k= 5 metric: manhattan:\n",
-      " acc = 0.8379150612580631\n",
-      " f1-score = 0.8107654592583807\n",
-      "k= 6 metric: cosine:\n",
-      " acc = 0.8322438200787913\n",
-      " f1-score = 0.8117186129597088\n",
-      "k= 6 metric: manhattan:\n",
-      " acc = 0.8342136023204467\n",
-      " f1-score = 0.8125962193311277\n"
+      "preprocessing: Label Encoding k= 5 metric: euclidean\n",
+      " acc = 0.8617614665861371\n",
+      " f2-score = 0.23177171798276766\n",
+      "preprocessing: Label Encoding k= 5 metric: cosine\n",
+      " acc = 0.8614239528191282\n",
+      " f2-score = 0.237501539219308\n",
+      "preprocessing: Label Encoding k= 5 metric: manhattan\n",
+      " acc = 0.8626674245923189\n",
+      " f2-score = 0.2382935406255784\n",
+      "preprocessing: Label Encoding k= 5 metric: jaccard\n",
+      " acc = 0.8719046434788787\n",
+      " f2-score = 0.0008675133597057394\n",
+      "preprocessing: Label Encoding k= 6 metric: euclidean\n",
+      " acc = 0.8704480051159982\n",
+      " f2-score = 0.1457070213182085\n",
+      "preprocessing: Label Encoding k= 6 metric: cosine\n",
+      " acc = 0.8696841581696095\n",
+      " f2-score = 0.15588035129792266\n",
+      "preprocessing: Label Encoding k= 6 metric: manhattan\n",
+      " acc = 0.8705545884108431\n",
+      " f2-score = 0.15369118793865347\n",
+      "preprocessing: Label Encoding k= 6 metric: jaccard\n",
+      " acc = 0.8719046434788787\n",
+      " f2-score = 0.0008675133597057394\n",
+      "preprocessing: Label Encoding k= 7 metric: euclidean\n",
+      " acc = 0.8670018119160123\n",
+      " f2-score = 0.21280276816608998\n",
+      "preprocessing: Label Encoding k= 7 metric: cosine\n",
+      " acc = 0.8662024372046755\n",
+      " f2-score = 0.22436798850035936\n",
+      "preprocessing: Label Encoding k= 7 metric: manhattan\n",
+      " acc = 0.8675347283902369\n",
+      " f2-score = 0.21731615336266502\n",
+      "preprocessing: Label Encoding k= 7 metric: jaccard\n",
+      " acc = 0.8719046434788787\n",
+      " f2-score = 0.0008675133597057394\n",
+      "preprocessing: Label Encoding k= 8 metric: euclidean\n",
+      " acc = 0.8714783102994991\n",
+      " f2-score = 0.1452139823587063\n",
+      "preprocessing: Label Encoding k= 8 metric: cosine\n",
+      " acc = 0.8710164493551711\n",
+      " f2-score = 0.1533632578714546\n",
+      "preprocessing: Label Encoding k= 8 metric: manhattan\n",
+      " acc = 0.8719401712438271\n",
+      " f2-score = 0.1531643094570814\n",
+      "preprocessing: Label Encoding k= 8 metric: jaccard\n",
+      " acc = 0.8719046434788787\n",
+      " f2-score = 0.0008675133597057394\n",
+      "preprocessing: Label Encoding k= 9 metric: euclidean\n",
+      " acc = 0.8705545884108431\n",
+      " f2-score = 0.2023673157693776\n",
+      "preprocessing: Label Encoding k= 9 metric: cosine\n",
+      " acc = 0.8685117419263154\n",
+      " f2-score = 0.21005085441738527\n",
+      "preprocessing: Label Encoding k= 9 metric: manhattan\n",
+      " acc = 0.8697019220520837\n",
+      " f2-score = 0.20744849445324878\n",
+      "preprocessing: Label Encoding k= 9 metric: jaccard\n",
+      " acc = 0.8719046434788787\n",
+      " f2-score = 0.0008675133597057394\n",
+      "preprocessing: Label Encoding k= 10 metric: euclidean\n",
+      " acc = 0.8726329626603191\n",
+      " f2-score = 0.14320825823365557\n",
+      "preprocessing: Label Encoding k= 10 metric: cosine\n",
+      " acc = 0.8724375599531033\n",
+      " f2-score = 0.15192558746736293\n",
+      "preprocessing: Label Encoding k= 10 metric: manhattan\n",
+      " acc = 0.8726684904252674\n",
+      " f2-score = 0.1493805772562351\n",
+      "preprocessing: Label Encoding k= 10 metric: jaccard\n",
+      " acc = 0.8719046434788787\n",
+      " f2-score = 0.0008675133597057394\n",
+      "preprocessing: Label Encoding k= 11 metric: euclidean\n",
+      " acc = 0.8719756990087754\n",
+      " f2-score = 0.19331795758857068\n",
+      "preprocessing: Label Encoding k= 11 metric: cosine\n",
+      " acc = 0.8714960741819732\n",
+      " f2-score = 0.20431888396980605\n",
+      "preprocessing: Label Encoding k= 11 metric: manhattan\n",
+      " acc = 0.8708032827654812\n",
+      " f2-score = 0.19423678998147081\n",
+      "preprocessing: Label Encoding k= 11 metric: jaccard\n",
+      " acc = 0.8719046434788787\n",
+      " f2-score = 0.0008675133597057394\n",
+      "preprocessing: Label Encoding k= 12 metric: euclidean\n",
+      " acc = 0.8734856290190784\n",
+      " f2-score = 0.14960552591089143\n",
+      "preprocessing: Label Encoding k= 12 metric: cosine\n",
+      " acc = 0.873201406899492\n",
+      " f2-score = 0.1547451927785577\n",
+      "preprocessing: Label Encoding k= 12 metric: manhattan\n",
+      " acc = 0.8739297260809322\n",
+      " f2-score = 0.15203587326525267\n",
+      "preprocessing: Label Encoding k= 12 metric: jaccard\n",
+      " acc = 0.8719046434788787\n",
+      " f2-score = 0.0008675133597057394\n",
+      "preprocessing: Label Encoding k= 13 metric: euclidean\n",
+      " acc = 0.8727928376025864\n",
+      " f2-score = 0.18915530984829002\n",
+      "preprocessing: Label Encoding k= 13 metric: cosine\n",
+      " acc = 0.8716914768891889\n",
+      " f2-score = 0.19321892809118268\n",
+      "preprocessing: Label Encoding k= 13 metric: manhattan\n",
+      " acc = 0.8729349486623796\n",
+      " f2-score = 0.1926163723916533\n",
+      "preprocessing: Label Encoding k= 13 metric: jaccard\n",
+      " acc = 0.8719046434788787\n",
+      " f2-score = 0.0008675133597057394\n",
+      "preprocessing: Label Encoding k= 14 metric: euclidean\n",
+      " acc = 0.8737520872561907\n",
+      " f2-score = 0.1445874089148559\n",
+      "preprocessing: Label Encoding k= 14 metric: cosine\n",
+      " acc = 0.8737520872561907\n",
+      " f2-score = 0.15244700340225073\n",
+      "preprocessing: Label Encoding k= 14 metric: manhattan\n",
+      " acc = 0.8738764344335098\n",
+      " f2-score = 0.14523911116946203\n",
+      "preprocessing: Label Encoding k= 14 metric: jaccard\n",
+      " acc = 0.8719046434788787\n",
+      " f2-score = 0.0008675133597057394\n",
+      "preprocessing: Label Encoding k= 15 metric: euclidean\n",
+      " acc = 0.8739474899634064\n",
+      " f2-score = 0.18088648928259676\n",
+      "preprocessing: Label Encoding k= 15 metric: cosine\n",
+      " acc = 0.872739545955164\n",
+      " f2-score = 0.18898852569665417\n",
+      "preprocessing: Label Encoding k= 15 metric: manhattan\n",
+      " acc = 0.8734856290190784\n",
+      " f2-score = 0.17908517860029097\n",
+      "preprocessing: Label Encoding k= 15 metric: jaccard\n",
+      " acc = 0.8719046434788787\n",
+      " f2-score = 0.0008675133597057394\n"
      ]
     }
    ],
