run label encoding no sampling again for k < 5

--- a/jupyter_notebooks/k_nearest_neighbor.ipynb
+++ b/jupyter_notebooks/k_nearest_neighbor.ipynb
@@ -120,142 +120,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "preprocessing: Label Encoding k= 5 metric: euclidean\n",
-      " acc = 0.8617614665861371\n",
-      " f2-score = 0.23177171798276766\n",
-      "preprocessing: Label Encoding k= 5 metric: cosine\n",
-      " acc = 0.8614239528191282\n",
-      " f2-score = 0.237501539219308\n",
-      "preprocessing: Label Encoding k= 5 metric: manhattan\n",
-      " acc = 0.8626674245923189\n",
-      " f2-score = 0.2382935406255784\n",
-      "preprocessing: Label Encoding k= 5 metric: jaccard\n",
-      " acc = 0.8719046434788787\n",
-      " f2-score = 0.0008675133597057394\n",
-      "preprocessing: Label Encoding k= 6 metric: euclidean\n",
-      " acc = 0.8704480051159982\n",
-      " f2-score = 0.1457070213182085\n",
-      "preprocessing: Label Encoding k= 6 metric: cosine\n",
-      " acc = 0.8696841581696095\n",
-      " f2-score = 0.15588035129792266\n",
-      "preprocessing: Label Encoding k= 6 metric: manhattan\n",
-      " acc = 0.8705545884108431\n",
-      " f2-score = 0.15369118793865347\n",
-      "preprocessing: Label Encoding k= 6 metric: jaccard\n",
-      " acc = 0.8719046434788787\n",
-      " f2-score = 0.0008675133597057394\n",
-      "preprocessing: Label Encoding k= 7 metric: euclidean\n",
-      " acc = 0.8670018119160123\n",
-      " f2-score = 0.21280276816608998\n",
-      "preprocessing: Label Encoding k= 7 metric: cosine\n",
-      " acc = 0.8662024372046755\n",
-      " f2-score = 0.22436798850035936\n",
-      "preprocessing: Label Encoding k= 7 metric: manhattan\n",
-      " acc = 0.8675347283902369\n",
-      " f2-score = 0.21731615336266502\n",
-      "preprocessing: Label Encoding k= 7 metric: jaccard\n",
-      " acc = 0.8719046434788787\n",
-      " f2-score = 0.0008675133597057394\n",
-      "preprocessing: Label Encoding k= 8 metric: euclidean\n",
-      " acc = 0.8714783102994991\n",
-      " f2-score = 0.1452139823587063\n",
-      "preprocessing: Label Encoding k= 8 metric: cosine\n",
-      " acc = 0.8710164493551711\n",
-      " f2-score = 0.1533632578714546\n",
-      "preprocessing: Label Encoding k= 8 metric: manhattan\n",
-      " acc = 0.8719401712438271\n",
-      " f2-score = 0.1531643094570814\n",
-      "preprocessing: Label Encoding k= 8 metric: jaccard\n",
-      " acc = 0.8719046434788787\n",
-      " f2-score = 0.0008675133597057394\n",
-      "preprocessing: Label Encoding k= 9 metric: euclidean\n",
-      " acc = 0.8705545884108431\n",
-      " f2-score = 0.2023673157693776\n",
-      "preprocessing: Label Encoding k= 9 metric: cosine\n",
-      " acc = 0.8685117419263154\n",
-      " f2-score = 0.21005085441738527\n",
-      "preprocessing: Label Encoding k= 9 metric: manhattan\n",
-      " acc = 0.8697019220520837\n",
-      " f2-score = 0.20744849445324878\n",
-      "preprocessing: Label Encoding k= 9 metric: jaccard\n",
-      " acc = 0.8719046434788787\n",
-      " f2-score = 0.0008675133597057394\n",
-      "preprocessing: Label Encoding k= 10 metric: euclidean\n",
-      " acc = 0.8726329626603191\n",
-      " f2-score = 0.14320825823365557\n",
-      "preprocessing: Label Encoding k= 10 metric: cosine\n",
-      " acc = 0.8724375599531033\n",
-      " f2-score = 0.15192558746736293\n",
-      "preprocessing: Label Encoding k= 10 metric: manhattan\n",
-      " acc = 0.8726684904252674\n",
-      " f2-score = 0.1493805772562351\n",
-      "preprocessing: Label Encoding k= 10 metric: jaccard\n",
-      " acc = 0.8719046434788787\n",
-      " f2-score = 0.0008675133597057394\n",
-      "preprocessing: Label Encoding k= 11 metric: euclidean\n",
-      " acc = 0.8719756990087754\n",
-      " f2-score = 0.19331795758857068\n",
-      "preprocessing: Label Encoding k= 11 metric: cosine\n",
-      " acc = 0.8714960741819732\n",
-      " f2-score = 0.20431888396980605\n",
-      "preprocessing: Label Encoding k= 11 metric: manhattan\n",
-      " acc = 0.8708032827654812\n",
-      " f2-score = 0.19423678998147081\n",
-      "preprocessing: Label Encoding k= 11 metric: jaccard\n",
-      " acc = 0.8719046434788787\n",
-      " f2-score = 0.0008675133597057394\n",
-      "preprocessing: Label Encoding k= 12 metric: euclidean\n",
-      " acc = 0.8734856290190784\n",
-      " f2-score = 0.14960552591089143\n",
-      "preprocessing: Label Encoding k= 12 metric: cosine\n",
-      " acc = 0.873201406899492\n",
-      " f2-score = 0.1547451927785577\n",
-      "preprocessing: Label Encoding k= 12 metric: manhattan\n",
-      " acc = 0.8739297260809322\n",
-      " f2-score = 0.15203587326525267\n",
-      "preprocessing: Label Encoding k= 12 metric: jaccard\n",
-      " acc = 0.8719046434788787\n",
-      " f2-score = 0.0008675133597057394\n",
-      "preprocessing: Label Encoding k= 13 metric: euclidean\n",
-      " acc = 0.8727928376025864\n",
-      " f2-score = 0.18915530984829002\n",
-      "preprocessing: Label Encoding k= 13 metric: cosine\n",
+      "preprocessing: Label Encoding k= 1 metric: euclidean\n",
+      " acc = 0.8216150921945501\n",
+      " f2-score = 0.2991179498594841\n",
+      "preprocessing: Label Encoding k= 1 metric: cosine\n",
+      " acc = 0.8197854122997122\n",
+      " f2-score = 0.30350420726306465\n",
+      "preprocessing: Label Encoding k= 1 metric: manhattan\n",
+      " acc = 0.8230717305574307\n",
+      " f2-score = 0.30445551442963287\n",
+      "preprocessing: Label Encoding k= 1 metric: jaccard\n",
+      " acc = 0.8529328169964827\n",
+      " f2-score = 0.0535538814281035\n",
+      "preprocessing: Label Encoding k= 2 metric: euclidean\n",
+      " acc = 0.8652431875510712\n",
+      " f2-score = 0.13700404858299592\n",
+      "preprocessing: Label Encoding k= 2 metric: cosine\n",
+      " acc = 0.8652076597861229\n",
+      " f2-score = 0.13989972505256346\n",
+      "preprocessing: Label Encoding k= 2 metric: manhattan\n",
+      " acc = 0.8662379649696238\n",
+      " f2-score = 0.1413856768049752\n",
+      "preprocessing: Label Encoding k= 2 metric: jaccard\n",
+      " acc = 0.8721178100685686\n",
+      " f2-score = 0.0\n",
+      "preprocessing: Label Encoding k= 3 metric: euclidean\n",
+      " acc = 0.8516005258109213\n",
+      " f2-score = 0.2606394114304513\n",
+      "preprocessing: Label Encoding k= 3 metric: cosine\n",
+      " acc = 0.8518492201655594\n",
+      " f2-score = 0.2670286720171853\n",
+      "preprocessing: Label Encoding k= 3 metric: manhattan\n",
+      " acc = 0.8518136924006111\n",
+      " f2-score = 0.2600628460272333\n",
+      "preprocessing: Label Encoding k= 3 metric: jaccard\n",
       " acc = 0.8716914768891889\n",
-      " f2-score = 0.19321892809118268\n",
-      "preprocessing: Label Encoding k= 13 metric: manhattan\n",
-      " acc = 0.8729349486623796\n",
-      " f2-score = 0.1926163723916533\n",
-      "preprocessing: Label Encoding k= 13 metric: jaccard\n",
-      " acc = 0.8719046434788787\n",
-      " f2-score = 0.0008675133597057394\n",
-      "preprocessing: Label Encoding k= 14 metric: euclidean\n",
-      " acc = 0.8737520872561907\n",
-      " f2-score = 0.1445874089148559\n",
-      "preprocessing: Label Encoding k= 14 metric: cosine\n",
-      " acc = 0.8737520872561907\n",
-      " f2-score = 0.15244700340225073\n",
-      "preprocessing: Label Encoding k= 14 metric: manhattan\n",
-      " acc = 0.8738764344335098\n",
-      " f2-score = 0.14523911116946203\n",
-      "preprocessing: Label Encoding k= 14 metric: jaccard\n",
-      " acc = 0.8719046434788787\n",
-      " f2-score = 0.0008675133597057394\n",
-      "preprocessing: Label Encoding k= 15 metric: euclidean\n",
-      " acc = 0.8739474899634064\n",
-      " f2-score = 0.18088648928259676\n",
-      "preprocessing: Label Encoding k= 15 metric: cosine\n",
-      " acc = 0.872739545955164\n",
-      " f2-score = 0.18898852569665417\n",
-      "preprocessing: Label Encoding k= 15 metric: manhattan\n",
-      " acc = 0.8734856290190784\n",
-      " f2-score = 0.17908517860029097\n",
-      "preprocessing: Label Encoding k= 15 metric: jaccard\n",
+      " f2-score = 0.0008671522719389524\n",
+      "preprocessing: Label Encoding k= 4 metric: euclidean\n",
+      " acc = 0.868227519806729\n",
+      " f2-score = 0.14938915713406137\n",
+      "preprocessing: Label Encoding k= 4 metric: cosine\n",
+      " acc = 0.8677478949799268\n",
+      " f2-score = 0.15199534312140223\n",
+      "preprocessing: Label Encoding k= 4 metric: manhattan\n",
+      " acc = 0.8696308665221871\n",
+      " f2-score = 0.15738341968911918\n",
+      "preprocessing: Label Encoding k= 4 metric: jaccard\n",
       " acc = 0.8719046434788787\n",
       " f2-score = 0.0008675133597057394\n"
      ]
@@ -270,7 +186,7 @@
     "#metrics that should be used\n",
     "params = ('euclidean', 'cosine', 'manhattan', 'jaccard')\n",
     "\n",
-    "for k_neighbors in range(5,16):\n",
+    "for k_neighbors in range(1,5):\n",
     "    for metric in params:\n",
     "        knn_estimator = KNeighborsClassifier(n_neighbors=k_neighbors, metric=metric)\n",
     "        knn_estimator.fit(data_train, target_train.values.ravel())\n",
