run label encoding with oversampling for k < 5

--- a/jupyter_notebooks/k_nearest_neighbor.ipynb
+++ b/jupyter_notebooks/k_nearest_neighbor.ipynb
@@ -208,8 +208,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 7,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "preprocessing: Label Encoding + Oversampling k= 1 metric: euclidean\n",
+      " acc = 0.8216150921945501\n",
+      " f2-score = 0.2991179498594841\n",
+      "preprocessing: Label Encoding + Oversampling k= 1 metric: cosine\n",
+      " acc = 0.8197854122997122\n",
+      " f2-score = 0.30350420726306465\n",
+      "preprocessing: Label Encoding + Oversampling k= 1 metric: manhattan\n",
+      " acc = 0.8230717305574307\n",
+      " f2-score = 0.30445551442963287\n",
+      "preprocessing: Label Encoding + Oversampling k= 1 metric: jaccard\n",
+      " acc = 0.8529328169964827\n",
+      " f2-score = 0.0535538814281035\n",
+      "preprocessing: Label Encoding + Oversampling k= 2 metric: euclidean\n",
+      " acc = 0.8219348420790848\n",
+      " f2-score = 0.29853240134785153\n",
+      "preprocessing: Label Encoding + Oversampling k= 2 metric: cosine\n",
+      " acc = 0.8199452872419796\n",
+      " f2-score = 0.3030932402868932\n",
+      "preprocessing: Label Encoding + Oversampling k= 2 metric: manhattan\n",
+      " acc = 0.8235513553842327\n",
+      " f2-score = 0.3041952197894033\n",
+      "preprocessing: Label Encoding + Oversampling k= 2 metric: jaccard\n",
+      " acc = 0.8721178100685686\n",
+      " f2-score = 0.0\n",
+      "preprocessing: Label Encoding + Oversampling k= 3 metric: euclidean\n",
+      " acc = 0.778448857782357\n",
+      " f2-score = 0.42176024205158236\n",
+      "preprocessing: Label Encoding + Oversampling k= 3 metric: cosine\n",
+      " acc = 0.7745763314029914\n",
+      " f2-score = 0.4233592557598663\n",
+      "preprocessing: Label Encoding + Oversampling k= 3 metric: manhattan\n",
+      " acc = 0.7790883575514265\n",
+      " f2-score = 0.42466521940629803\n",
+      "preprocessing: Label Encoding + Oversampling k= 3 metric: jaccard\n",
+      " acc = 0.8716914768891889\n",
+      " f2-score = 0.0008671522719389524\n",
+      "preprocessing: Label Encoding + Oversampling k= 4 metric: euclidean\n",
+      " acc = 0.7796923295555477\n",
+      " f2-score = 0.41973616583861567\n",
+      "preprocessing: Label Encoding + Oversampling k= 4 metric: cosine\n",
+      " acc = 0.7758908587060788\n",
+      " f2-score = 0.421597453405584\n",
+      "preprocessing: Label Encoding + Oversampling k= 4 metric: manhattan\n",
+      " acc = 0.7802607737947206\n",
+      " f2-score = 0.42199926587544345\n",
+      "preprocessing: Label Encoding + Oversampling k= 4 metric: jaccard\n",
+      " acc = 0.751270117596902\n",
+      " f2-score = 0.27622997926088805\n",
+      "preprocessing: Label Encoding + Oversampling k= 5 metric: euclidean\n",
+      " acc = 0.743525064838171\n",
+      " f2-score = 0.47542530957143175\n",
+      "preprocessing: Label Encoding + Oversampling k= 5 metric: cosine\n",
+      " acc = 0.7368813727928376\n",
+      " f2-score = 0.47399114118458835\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
+      "\u001B[0;32m/var/folders/gb/ysvlhf750rb4j7nrjksxskw00000gn/T/ipykernel_43057/2421284601.py\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m     11\u001B[0m         \u001B[0mknn_estimator\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mKNeighborsClassifier\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mn_neighbors\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0mk_neighbors\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mmetric\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0mmetric\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     12\u001B[0m         \u001B[0mknn_estimator\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mfit\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mdata_train\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mtarget_train\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mvalues\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mravel\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m---> 13\u001B[0;31m         \u001B[0mdiabetes_test_prediction\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mknn_estimator\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mpredict\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mdata_validation\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m     14\u001B[0m         \u001B[0mprint\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mevaluation\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mtarget_validation\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mdiabetes_test_prediction\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mk_neighbors\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mmetric\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mpreprocessing\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;32m~/opt/anaconda3/lib/python3.9/site-packages/sklearn/neighbors/_classification.py\u001B[0m in \u001B[0;36mpredict\u001B[0;34m(self, X)\u001B[0m\n\u001B[1;32m    217\u001B[0m             \u001B[0;31m# In that case, we do not need the distances to perform\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    218\u001B[0m             \u001B[0;31m# the weighting so we do not compute them.\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m--> 219\u001B[0;31m             \u001B[0mneigh_ind\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mkneighbors\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mX\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mreturn_distance\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0;32mFalse\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m    220\u001B[0m             \u001B[0mneigh_dist\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0;32mNone\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    221\u001B[0m         \u001B[0;32melse\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;32m~/opt/anaconda3/lib/python3.9/site-packages/sklearn/neighbors/_base.py\u001B[0m in \u001B[0;36mkneighbors\u001B[0;34m(self, X, n_neighbors, return_distance)\u001B[0m\n\u001B[1;32m    761\u001B[0m         )\n\u001B[1;32m    762\u001B[0m         \u001B[0;32mif\u001B[0m \u001B[0muse_pairwise_distances_reductions\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m--> 763\u001B[0;31m             results = PairwiseDistancesArgKmin.compute(\n\u001B[0m\u001B[1;32m    764\u001B[0m                 \u001B[0mX\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0mX\u001B[0m\u001B[0;34m,\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    765\u001B[0m                 \u001B[0mY\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0m_fit_X\u001B[0m\u001B[0;34m,\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;32msklearn/metrics/_pairwise_distances_reduction.pyx\u001B[0m in \u001B[0;36msklearn.metrics._pairwise_distances_reduction.PairwiseDistancesArgKmin.compute\u001B[0;34m()\u001B[0m\n",
+      "\u001B[0;32m~/opt/anaconda3/lib/python3.9/site-packages/threadpoolctl.py\u001B[0m in \u001B[0;36m__exit__\u001B[0;34m(self, type, value, traceback)\u001B[0m\n\u001B[1;32m    174\u001B[0m         \u001B[0;32mreturn\u001B[0m \u001B[0mself\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    175\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m--> 176\u001B[0;31m     \u001B[0;32mdef\u001B[0m \u001B[0m__exit__\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mself\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mtype\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mvalue\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mtraceback\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m    177\u001B[0m         \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0munregister\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    178\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;31mKeyboardInterrupt\u001B[0m: "
+     ]
+    }
+   ],
    "source": [
     "preprocessing = \"Label Encoding + Oversampling\"\n",
     "\n",
@@ -219,7 +295,7 @@
     "#metrics that should be used\n",
     "params = ('euclidean', 'cosine', 'manhattan', 'jaccard')\n",
     "\n",
-    "for k_neighbors in range(5,7):\n",
+    "for k_neighbors in range(1,16):\n",
     "    for metric in params:\n",
     "        knn_estimator = KNeighborsClassifier(n_neighbors=k_neighbors, metric=metric)\n",
     "        knn_estimator.fit(data_train, target_train.values.ravel())\n",
