--- a/jupyter_notebooks/k_nearest_centroid.ipynb
+++ b/jupyter_notebooks/k_nearest_centroid.ipynb
@@ -80,6 +80,18 @@
    }
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "#metrics that should be used\n",
+    "metrics = ('euclidean', 'cosine', 'manhattan', 'jaccard')"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "markdown",
    "source": [
     "The below defined function is used to store all the accuracy and F2-scores for a better comparison and evaluation capability at the end. It also returns the Accuracy score and F2-Score to see the performance directly under each method.\n"
@@ -140,10 +152,7 @@
     "#load data\n",
     "data_train, data_validation, target_train, target_validation = get_preprocessed_brfss_dataset_label_encoded_train_test_split()\n",
     "\n",
-    "#metrics that should be used\n",
-    "params = ('euclidean', 'cosine', 'manhattan', 'jaccard')\n",
-    "\n",
-    "for metric in params:\n",
+    "for metric in metrics:\n",
     "    nearest_centroid = NearestCentroid(metric=metric)\n",
     "    nearest_centroid.fit(data_train, target_train.values.ravel())\n",
     "    diabetes_test_prediction = nearest_centroid.predict(data_validation)\n",
@@ -172,10 +181,7 @@
     "#load data\n",
     "data_train, data_validation, target_train, target_validation = get_preprocessed_brfss_dataset_label_encoded_train_test_split_oversampled()\n",
     "\n",
-    "#metrics that should be used\n",
-    "params = ('euclidean', 'cosine', 'manhattan', 'jaccard')\n",
-    "\n",
-    "for metric in params:\n",
+    "for metric in metrics:\n",
     "    nearest_centroid = NearestCentroid(metric=metric)\n",
     "    nearest_centroid.fit(data_train, target_train.values.ravel())\n",
     "    diabetes_test_prediction = nearest_centroid.predict(data_validation)\n",
@@ -204,10 +210,7 @@
     "#load data\n",
     "data_train, data_validation, target_train, target_validation = get_preprocessed_brfss_dataset_label_encoded_train_test_split_undersampled()\n",
     "\n",
-    "#metrics that should be used\n",
-    "params = ('euclidean', 'cosine', 'manhattan', 'jaccard')\n",
-    "\n",
-    "for metric in params:\n",
+    "for metric in metrics:\n",
     "    nearest_centroid = NearestCentroid(metric=metric)\n",
     "    nearest_centroid.fit(data_train, target_train.values.ravel())\n",
     "    diabetes_test_prediction = nearest_centroid.predict(data_validation)\n",
@@ -237,10 +240,7 @@
     "#load data\n",
     "data_train, data_validation, target_train, target_validation = get_preprocessed_brfss_dataset_one_hot_encoded_train_test_split()\n",
     "\n",
-    "#metrics that should be used\n",
-    "params = ('euclidean', 'cosine', 'manhattan', 'jaccard')\n",
-    "\n",
-    "for metric in params:\n",
+    "for metric in metrics:\n",
     "    nearest_centroid = NearestCentroid(metric=metric)\n",
     "    nearest_centroid.fit(data_train, target_train.values.ravel())\n",
     "    diabetes_test_prediction = nearest_centroid.predict(data_validation)\n",
@@ -270,10 +270,7 @@
     "#load data\n",
     "data_train, data_validation, target_train, target_validation = get_preprocessed_brfss_dataset_one_hot_encoded_all_columns_train_test_split()\n",
     "\n",
-    "#metrics that should be used\n",
-    "params = ('euclidean', 'cosine', 'manhattan', 'jaccard')\n",
-    "\n",
-    "for metric in params:\n",
+    "for metric in metrics:\n",
     "    nearest_centroid = NearestCentroid(metric=metric)\n",
     "    nearest_centroid.fit(data_train, target_train.values.ravel())\n",
     "    diabetes_test_prediction = nearest_centroid.predict(data_validation)\n",
@@ -302,10 +299,7 @@
     "#load data\n",
     "data_train, data_validation, target_train, target_validation = get_preprocessed_brfss_dataset_one_hot_encoded_train_test_split_oversampled()\n",
     "\n",
-    "#metrics that should be used\n",
-    "params = ('euclidean', 'cosine', 'manhattan', 'jaccard')\n",
-    "\n",
-    "for metric in params:\n",
+    "for metric in metrics:\n",
     "    nearest_centroid = NearestCentroid(metric=metric)\n",
     "    nearest_centroid.fit(data_train, target_train.values.ravel())\n",
     "    diabetes_test_prediction = nearest_centroid.predict(data_validation)\n",
@@ -334,10 +328,7 @@
     "#load data\n",
     "data_train, data_validation, target_train, target_validation = get_preprocessed_brfss_dataset_one_hot_encoded_all_columns_train_test_split_oversampled()\n",
     "\n",
-    "#metrics that should be used\n",
-    "params = ('euclidean', 'cosine', 'manhattan', 'jaccard')\n",
-    "\n",
-    "for metric in params:\n",
+    "for metric in metrics:\n",
     "    nearest_centroid = NearestCentroid(metric=metric)\n",
     "    nearest_centroid.fit(data_train, target_train.values.ravel())\n",
     "    diabetes_test_prediction = nearest_centroid.predict(data_validation)\n",
@@ -366,10 +357,7 @@
     "#load data\n",
     "data_train, data_validation, target_train, target_validation = get_preprocessed_brfss_dataset_one_hot_encoded_train_test_split_undersampled()\n",
     "\n",
-    "#metrics that should be used\n",
-    "params = ('euclidean', 'cosine', 'manhattan', 'jaccard')\n",
-    "\n",
-    "for metric in params:\n",
+    "for metric in metrics:\n",
     "    nearest_centroid = NearestCentroid(metric=metric)\n",
     "    nearest_centroid.fit(data_train, target_train.values.ravel())\n",
     "    diabetes_test_prediction = nearest_centroid.predict(data_validation)\n",
@@ -398,10 +386,7 @@
     "#load data\n",
     "data_train, data_validation, target_train, target_validation = get_preprocessed_brfss_dataset_one_hot_encoded_all_columns_train_test_split_undersampled()\n",
     "\n",
-    "#metrics that should be used\n",
-    "params = ('euclidean', 'cosine', 'manhattan', 'jaccard')\n",
-    "\n",
-    "for metric in params:\n",
+    "for metric in metrics:\n",
     "    nearest_centroid = NearestCentroid(metric=metric)\n",
     "    nearest_centroid.fit(data_train, target_train.values.ravel())\n",
     "    diabetes_test_prediction = nearest_centroid.predict(data_validation)\n",
