--- a/jupyter_notebooks/k_nearest_neighbor.ipynb
+++ b/jupyter_notebooks/k_nearest_neighbor.ipynb
@@ -46,7 +46,7 @@
     "| **Parameter** |                    **range Values**                    |\n",
     "|:-------------:|:------------------------------------------------------:|\n",
     "|    metric     | 'euclidean',<br>'cosine',<br>'manhattan',<br>'jaccard' |\n",
-    "|  K-neighbors  |                          5-15                          |\n",
+    "|  K-neighbors  |                          1-15                          |\n",
     "\n",
     "And we will vary for preprocessing:\n",
     "\n",
@@ -62,6 +62,28 @@
     "| One Hot Encoding (2) <br>+<br>Oversampling  | One hot encoding for all columns including yes/no and oversampling  |\n",
     "| One Hot Encoding (1)<br>+<br>Undersampling  |  One hot encoding for all columns except yes/no and undersampling   |\n",
     "| One Hot Encoding (2) <br>+<br>Undersampling | One hot encoding for all columns including yes/no and undersampling |"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "range(1, 5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#metrics that should be used\n",
+    "metrics = ('euclidean', 'cosine', 'manhattan', 'jaccard')\n",
+    "n_neighbors_start = 1\n",
+    "n_neighbors_end = 16"
    ],
    "metadata": {
     "collapsed": false
@@ -183,15 +205,12 @@
     "#load data\n",
     "data_train, data_validation, target_train, target_validation = get_preprocessed_brfss_dataset_label_encoded_train_test_split()\n",
     "\n",
-    "#metrics that should be used\n",
-    "params = ('euclidean', 'cosine', 'manhattan', 'jaccard')\n",
-    "\n",
-    "for k_neighbors in range(1,5):\n",
-    "    for metric in params:\n",
-    "        knn_estimator = KNeighborsClassifier(n_neighbors=k_neighbors, metric=metric)\n",
+    "for n_neighbors in range(1,5):\n",
+    "    for metric in metrics:\n",
+    "        knn_estimator = KNeighborsClassifier(n_neighbors=n_neighbors, metric=metric)\n",
     "        knn_estimator.fit(data_train, target_train.values.ravel())\n",
     "        diabetes_test_prediction = knn_estimator.predict(data_validation)\n",
-    "        print(evaluation(target_validation, diabetes_test_prediction, k_neighbors, metric, preprocessing))"
+    "        print(evaluation(target_validation, diabetes_test_prediction, n_neighbors, metric, preprocessing))"
    ],
    "metadata": {
     "collapsed": false
@@ -292,15 +311,12 @@
     "#load data\n",
     "data_train, data_validation, target_train, target_validation = get_preprocessed_brfss_dataset_label_encoded_train_test_split_oversampled()\n",
     "\n",
-    "#metrics that should be used\n",
-    "params = ('euclidean', 'cosine', 'manhattan', 'jaccard')\n",
-    "\n",
-    "for k_neighbors in range(1,16):\n",
-    "    for metric in params:\n",
-    "        knn_estimator = KNeighborsClassifier(n_neighbors=k_neighbors, metric=metric)\n",
+    "for n_neighbors in range(1,16):\n",
+    "    for metric in metrics:\n",
+    "        knn_estimator = KNeighborsClassifier(n_neighbors=n_neighbors, metric=metric)\n",
     "        knn_estimator.fit(data_train, target_train.values.ravel())\n",
     "        diabetes_test_prediction = knn_estimator.predict(data_validation)\n",
-    "        print(evaluation(target_validation, diabetes_test_prediction, k_neighbors, metric, preprocessing))"
+    "        print(evaluation(target_validation, diabetes_test_prediction, n_neighbors, metric, preprocessing))"
    ],
    "metadata": {
     "collapsed": false
@@ -325,15 +341,12 @@
     "#load data\n",
     "data_train, data_validation, target_train, target_validation = get_preprocessed_brfss_dataset_label_encoded_train_test_split_undersampled()\n",
     "\n",
-    "#metrics that should be used\n",
-    "params = ('euclidean', 'cosine', 'manhattan', 'jaccard')\n",
-    "\n",
-    "for k_neighbors in range(5,7):\n",
-    "    for metric in params:\n",
-    "        knn_estimator = KNeighborsClassifier(n_neighbors=k_neighbors, metric=metric)\n",
+    "for n_neighbors in range(n_neighbors_start, n_neighbors_end):\n",
+    "    for metric in metrics:\n",
+    "        knn_estimator = KNeighborsClassifier(n_neighbors=n_neighbors, metric=metric)\n",
     "        knn_estimator.fit(data_train, target_train.values.ravel())\n",
     "        diabetes_test_prediction = knn_estimator.predict(data_validation)\n",
-    "        print(evaluation(target_validation, diabetes_test_prediction, k_neighbors, metric, preprocessing))"
+    "        print(evaluation(target_validation, diabetes_test_prediction, n_neighbors, metric, preprocessing))"
    ],
    "metadata": {
     "collapsed": false
@@ -359,15 +372,12 @@
     "#load data\n",
     "data_train, data_validation, target_train, target_validation = get_preprocessed_brfss_dataset_one_hot_encoded_train_test_split()\n",
     "\n",
-    "#metrics that should be used\n",
-    "params = ('euclidean', 'cosine', 'manhattan', 'jaccard')\n",
-    "\n",
-    "for k_neighbors in range(5,7):\n",
-    "    for metric in params:\n",
-    "        knn_estimator = KNeighborsClassifier(n_neighbors=k_neighbors, metric=metric)\n",
+    "for n_neighbors in range(n_neighbors_start, n_neighbors_end):\n",
+    "    for metric in metrics:\n",
+    "        knn_estimator = KNeighborsClassifier(n_neighbors=n_neighbors, metric=metric)\n",
     "        knn_estimator.fit(data_train, target_train.values.ravel())\n",
     "        diabetes_test_prediction = knn_estimator.predict(data_validation)\n",
-    "        print(evaluation(target_validation, diabetes_test_prediction, k_neighbors, metric, preprocessing))"
+    "        print(evaluation(target_validation, diabetes_test_prediction, n_neighbors, metric, preprocessing))"
    ],
    "metadata": {
     "collapsed": false
@@ -393,15 +403,12 @@
     "#load data\n",
     "data_train, data_validation, target_train, target_validation = get_preprocessed_brfss_dataset_one_hot_encoded_all_columns_train_test_split()\n",
     "\n",
-    "#metrics that should be used\n",
-    "params = ('euclidean', 'cosine', 'manhattan', 'jaccard')\n",
-    "\n",
-    "for k_neighbors in range(5,7):\n",
-    "    for metric in params:\n",
-    "        knn_estimator = KNeighborsClassifier(n_neighbors=k_neighbors, metric=metric)\n",
+    "for n_neighbors in range(n_neighbors_start, n_neighbors_end):\n",
+    "    for metric in metrics:\n",
+    "        knn_estimator = KNeighborsClassifier(n_neighbors=n_neighbors, metric=metric)\n",
     "        knn_estimator.fit(data_train, target_train.values.ravel())\n",
     "        diabetes_test_prediction = knn_estimator.predict(data_validation)\n",
-    "        print(evaluation(target_validation, diabetes_test_prediction, k_neighbors, metric, preprocessing))"
+    "        print(evaluation(target_validation, diabetes_test_prediction, n_neighbors, metric, preprocessing))"
    ],
    "metadata": {
     "collapsed": false
@@ -426,15 +433,12 @@
     "#load data\n",
     "data_train, data_validation, target_train, target_validation = get_preprocessed_brfss_dataset_one_hot_encoded_train_test_split_oversampled()\n",
     "\n",
-    "#metrics that should be used\n",
-    "params = ('euclidean', 'cosine', 'manhattan', 'jaccard')\n",
-    "\n",
-    "for k_neighbors in range(5,7):\n",
-    "    for metric in params:\n",
-    "        knn_estimator = KNeighborsClassifier(n_neighbors=k_neighbors, metric=metric)\n",
+    "for n_neighbors in range(n_neighbors_start, n_neighbors_end):\n",
+    "    for metric in metrics:\n",
+    "        knn_estimator = KNeighborsClassifier(n_neighbors=n_neighbors, metric=metric)\n",
     "        knn_estimator.fit(data_train, target_train.values.ravel())\n",
     "        diabetes_test_prediction = knn_estimator.predict(data_validation)\n",
-    "        print(evaluation(target_validation, diabetes_test_prediction, k_neighbors, metric, preprocessing))"
+    "        print(evaluation(target_validation, diabetes_test_prediction, n_neighbors, metric, preprocessing))"
    ],
    "metadata": {
     "collapsed": false
@@ -459,15 +463,12 @@
     "#load data\n",
     "data_train, data_validation, target_train, target_validation = get_preprocessed_brfss_dataset_one_hot_encoded_all_columns_train_test_split_oversampled()\n",
     "\n",
-    "#metrics that should be used\n",
-    "params = ('euclidean', 'cosine', 'manhattan', 'jaccard')\n",
-    "\n",
-    "for k_neighbors in range(5,7):\n",
-    "    for metric in params:\n",
-    "        knn_estimator = KNeighborsClassifier(n_neighbors=k_neighbors, metric=metric)\n",
+    "for n_neighbors in range(n_neighbors_start, n_neighbors_end):\n",
+    "    for metric in metrics:\n",
+    "        knn_estimator = KNeighborsClassifier(n_neighbors=n_neighbors, metric=metric)\n",
     "        knn_estimator.fit(data_train, target_train.values.ravel())\n",
     "        diabetes_test_prediction = knn_estimator.predict(data_validation)\n",
-    "        print(evaluation(target_validation, diabetes_test_prediction, k_neighbors, metric, preprocessing))"
+    "        print(evaluation(target_validation, diabetes_test_prediction, n_neighbors, metric, preprocessing))"
    ],
    "metadata": {
     "collapsed": false
@@ -492,15 +493,12 @@
     "#load data\n",
     "data_train, data_validation, target_train, target_validation = get_preprocessed_brfss_dataset_one_hot_encoded_train_test_split_undersampled()\n",
     "\n",
-    "#metrics that should be used\n",
-    "params = ('euclidean', 'cosine', 'manhattan', 'jaccard')\n",
-    "\n",
-    "for k_neighbors in range(5,7):\n",
-    "    for metric in params:\n",
-    "        knn_estimator = KNeighborsClassifier(n_neighbors=k_neighbors, metric=metric)\n",
+    "for n_neighbors in range(n_neighbors_start, n_neighbors_end):\n",
+    "    for metric in metrics:\n",
+    "        knn_estimator = KNeighborsClassifier(n_neighbors=n_neighbors, metric=metric)\n",
     "        knn_estimator.fit(data_train, target_train.values.ravel())\n",
     "        diabetes_test_prediction = knn_estimator.predict(data_validation)\n",
-    "        print(evaluation(target_validation, diabetes_test_prediction, k_neighbors, metric, preprocessing))"
+    "        print(evaluation(target_validation, diabetes_test_prediction, n_neighbors, metric, preprocessing))"
    ],
    "metadata": {
     "collapsed": false
@@ -525,15 +523,12 @@
     "#load data\n",
     "data_train, data_validation, target_train, target_validation = get_preprocessed_brfss_dataset_one_hot_encoded_all_columns_train_test_split_undersampled()\n",
     "\n",
-    "#metrics that should be used\n",
-    "params = ('euclidean', 'cosine', 'manhattan', 'jaccard')\n",
-    "\n",
-    "for k_neighbors in range(5,7):\n",
-    "    for metric in params:\n",
-    "        knn_estimator = KNeighborsClassifier(n_neighbors=k_neighbors, metric=metric)\n",
+    "for n_neighbors in range(n_neighbors_start, n_neighbors_end):\n",
+    "    for metric in metrics:\n",
+    "        knn_estimator = KNeighborsClassifier(n_neighbors=n_neighbors, metric=metric)\n",
     "        knn_estimator.fit(data_train, target_train.values.ravel())\n",
     "        diabetes_test_prediction = knn_estimator.predict(data_validation)\n",
-    "        print(evaluation(target_validation, diabetes_test_prediction, k_neighbors, metric, preprocessing))"
+    "        print(evaluation(target_validation, diabetes_test_prediction, n_neighbors, metric, preprocessing))"
    ],
    "metadata": {
     "collapsed": false
